--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.2.0",
-    "@angular/cdk": "^12.2.13",
+    "@angular/cdk": "^12.0.0",
     "@angular/common": "~12.2.0",
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
@@ -23,22 +23,40 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@fortawesome/angular-fontawesome": "^0.10.1",
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-regular-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@igniteui/material-icons-extended": "^2.8.0",
+    "@juggle/resize-observer": "^3.3.0",
+    "@nebular/auth": "^8.0.0",
+    "@nebular/eva-icons": "8.0.0",
+    "@nebular/theme": "^8.0.0",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "@ngmodule/material-carousel": "^0.6.0",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
     "bootstrap": "^5.1.3",
-    "ng-openapi-gen": "^0.19.2",
+    "classlist.js": "^1.1.20150312",
+    "eva-icons": "^1.1.2",
+    "hammerjs": "^2.0.8",
+    "igniteui-angular": "^12.3.7",
+    "jszip": "^3.6.0",
+    "minireset.css": "~0.0.4",
+    "ng-openapi-gen": "^0.20.0",
+    "ngx-cookie-service": "^12.0.0",
     "rxjs": "^6.6.7",
     "tslib": "^2.3.0",
+    "web-animations-js": "^2.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.4",
     "@angular/cli": "~12.2.4",
     "@angular/compiler-cli": "~12.2.0",
+    "@igniteui/angular-schematics": "~12.2.820",
+    "@schematics/angular": "~12.2.4",
+    "@types/hammerjs": "^2.0.40",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
