--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "ng-openapi-gen": "ng-openapi-gen",
-    "start": "npm run ng-openapi-gen && npm run ng -- serve",
+    "start": "npm run ng -- serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -37,13 +37,14 @@
     "@ngmodule/material-carousel": "^0.6.0",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^4.6.1",
     "classlist.js": "^1.1.20150312",
     "eva-icons": "^1.1.2",
     "hammerjs": "^2.0.8",
     "igniteui-angular": "^12.3.7",
     "jquery": "^3.5.1",
     "jszip": "^3.6.0",
+    "mdb-angular-ui-kit": "^2.0.0",
     "minireset.css": "~0.0.4",
     "ng-openapi-gen": "^0.20.0",
     "ngx-cookie-service": "^12.0.0",
