--- a/package.json
+++ b/package.json
@@ -42,10 +42,12 @@
     "eva-icons": "^1.1.2",
     "hammerjs": "^2.0.8",
     "igniteui-angular": "^12.3.7",
+    "jquery": "^3.5.1",
     "jszip": "^3.6.0",
     "minireset.css": "~0.0.4",
     "ng-openapi-gen": "^0.20.0",
     "ngx-cookie-service": "^12.0.0",
+    "ngx-toastr": "^9.2.0",
     "rxjs": "^6.6.7",
     "tslib": "^2.3.0",
     "web-animations-js": "^2.3.2",
