--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@ngmodule/material-carousel": "^0.6.0",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
+    "@types/axios": "^0.14.0",
     "bootstrap": "^4.6.1",
     "classlist.js": "^1.1.20150312",
     "eva-icons": "^1.1.2",
