--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "ng-openapi-gen": "ng-openapi-gen",
-    "start": "npm run ng-openapi-gen && ng -- serve",
+    "start": "npm run ng -- serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
