--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "scripts": {
         "ng": "ng",
         "ng-openapi-gen": "ng-openapi-gen",
-        "runWithCert":" npm run ng -- serve --ssl true --ssl-cert ssl/mwhttpslocalhostcertificate.crt --ssl-key ssl/private_key ",
+        "runWithCert": " npm run ng -- serve --ssl true --ssl-cert ssl/mwhttpslocalhostcertificate.crt --ssl-key ssl/private_key ",
         "start": "npm run ng -- serve",
         "build": "ng build",
         "watch": "ng build --watch --configuration development",
@@ -23,7 +23,6 @@
         "@angular/platform-browser": "~12.2.0",
         "@angular/platform-browser-dynamic": "~12.2.0",
         "@angular/router": "~12.2.0",
-        "axios": "^0.24.0",
         "@fortawesome/angular-fontawesome": "^0.10.1",
         "@fortawesome/fontawesome-free": "^6.0.0",
         "@fortawesome/fontawesome-svg-core": "^1.2.35",
@@ -33,14 +32,17 @@
         "@igniteui/material-icons-extended": "^2.8.0",
         "@juggle/resize-observer": "^3.3.0",
         "@lyracom/embedded-form-glue": "^1.0.0",
-    "@nebular/auth": "^8.0.0",
+        "@nebular/auth": "^8.0.0",
         "@nebular/eva-icons": "8.0.0",
+        "@nebular/security": "^8.0.0",
         "@nebular/theme": "^8.0.0",
         "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+        "@ng-select/ng-select": "^7.4.0",
         "@ngmodule/material-carousel": "^0.6.0",
         "@ngx-translate/core": "^14.0.0",
         "@ngx-translate/http-loader": "^7.0.0",
-    "@types/axios": "^0.14.0",
+        "@types/axios": "^0.14.0",
+        "axios": "^0.24.0",
         "bootstrap": "^4.6.1",
         "classlist.js": "^1.1.20150312",
         "eva-icons": "^1.1.2",
@@ -53,6 +55,8 @@
         "ng-openapi-gen": "^0.20.0",
         "ngx-cookie-service": "^12.0.0",
         "ngx-toastr": "^9.2.0",
+        "primeicons": "^5.0.0",
+        "primeng": "^12.2.3",
         "rxjs": "^6.6.7",
         "tslib": "^2.3.0",
         "web-animations-js": "^2.3.2",
